--- a/templates/resourcing.html
+++ b/templates/resourcing.html
@@ -1,7 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <!-- In your HTML file -->
+{% extends "base.html" %}
+{% block body %}
 <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/dist/tippy.css" />
 <script src="https://unpkg.com/@popperjs/core@2"></script>
 <script src="https://unpkg.com/tippy.js@6"></script>
@@ -1086,4 +1084,4 @@ document.addEventListener("DOMContentLoaded", async () => {
 </script>
 
 </body>
-</html>
+{% endblock %}
